<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Presenter</string>
    <string name="present">Start</string>
    <string name="gyro">Start Gyroscope</string>
    <string name="scan">QR-Code Scanner</string>
    <string name="exit">Exit</string>
    <string name="load_presentation">DL</string>
    <string name="title_activity_present">PresentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_gyro">Gyro</string>
    <string name="last_slide">END</string>
    <string name="settings">Settings</string>
    <string name="init_title">Natural Presentation</string>
    <string name="good_luck">Good luck!</string>
    <string name="instructions_description">Instructions</string>
    <string name="next">Next slide</string>
    
    <!-- Settings -->
	<string name="pref_timer_title">Timer</string>
	<string name="timer_length_summary">Determine the time for each slide</string>
	<string name="timer_length_title">Timer duration</string>
	
	<string name="timer_enabled_summary">Disable/enable countdown timer for slide</string>
	<string name="timer_enabled_title">Timer enabled</string>
	
	<string name="miscellaneous">Miscellaneous</string>
	<string name="cache_title">Clear Cache</string>
	<string name="cache_summary">Deletes all saved presentations</string>
</resources>
